--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:theme="@style/Theme.CarChargers"
         tools:targetApi="31">
         <activity
+            android:name=".activity_filters"
+            android:exported="false"
+            android:label="@string/title_activity_filters"
+            android:theme="@style/Theme.CarChargers" />
+        <activity
             android:name=".activities.info.InfoActivity"
             android:exported="false"
             android:label="@string/title_activity_info"
