--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+
     // Retrofit (for REST API access) https://square.github.io/retrofit/
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
