--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -80,6 +80,9 @@ android {
 
 dependencies {
 
+
+    implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
